# fintrack

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  DEPLOYMENT.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
backend/: .dockerignore  Dockerfile  conftest.py  pyproject.toml  requirements.txt
backend/apps/assets/: admin.py  apps.py  models.py  scheduler.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/assets/migrations/: 0001_initial.py  0003_add_timestamps_to_snapshots.py  0005_add_account_snapshot.py  0005_remove_position_snapshot.py  0006_seed_initial_snapshots.py  0006_settings_tax_treaty_limits.py  0007_asset_domicile_country_asset_issuer_country_and_more.py  0007_settings_tax_country.py  0008_asset_isin.py  0009_alter_asset_type.py  0010_settings_default_price_source_and_more.py  0011_add_portfolio_snapshot.py  0016_asset_tv_symbol.py  (+6 more)
backend/apps/core/: authentication.py  cache.py  mixins.py  models.py  serializers.py  urls.py  views.py
backend/apps/importer/: serializers.py  urls.py  views.py
backend/apps/payroll/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/portfolio/: services.py  urls.py  views.py
backend/apps/reports/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/transactions/: filters.py  models.py  serializers.py  urls.py  views.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  development.py  production.py
(+268 files in other folders)
